ontol/ontol-compiler/test-cases/error/fundamentals/cannot_redefine_ontol.on
def ontol () // ERROR TODO: definition of external identifier
